# aionet

./: .gitignore  ASSUMPTIONS.md  README.md  config.toml
docker/: Dockerfile.toolbox  apparmor-profile  seccomp-profile.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  LIA-V2-ANALYSIS.md  SPRINT-2-PLAN.md  TESTING.md
proto/: messages.proto
python/: requirements.tools.txt  requirements.txt
python/agent_core/: __init__.py  __main__.py  agent.py  loop_detector.py  prompt_builder.py  security.py  task_complexity.py
python/avatar/: __init__.py  __main__.py  homunculus_backend.py  ws_bridge.py
python/common/: __init__.py  config.py  embedder.py  interfaces.py  logging.py  proto.py  zmq_transport.py
python/llm_engine/: __init__.py  __main__.py  ollama_client.py
python/memory/: __init__.py  __main__.py  faiss_memory.py
python/tools/: __init__.py  __main__.py  _base.py  broker.py  browser_server.py  fs_server.py  shell_server.py  winget_server.py
rust/: Cargo.toml  build.rs  tauri.conf.json
rust/capabilities/: default.json
rust/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rust/frontend/src/: App.tsx  styles.css
rust/src/: ipc.rs  lib.rs  main.rs  proto.rs
scripts/: build_sandbox.sh  dev_tauri.ps1  dev_tauri.sh  gen_icons.py  gen_proto.sh  mock_ollama.py  start_all.sh  start_bg.ps1  start_bg.sh  stop_bg.ps1  stop_bg.sh  test_launch.py  web_ui.py
tests/: integration_test.py  test_integration.py  test_load.py  test_memory_unit.py  test_sprint1.py
web_ui/: app.js  index.html  styles.css
