[package]
name = "aionet-tauri"
version = "0.1.0"
description = "Aionet — Local AI Agent desktop UI"
authors = ["Aionet"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "aionet_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
prost-build = "0.13"
protoc-bin-vendored = "3.0"  # vendored protoc binary — не требует системной установки

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zmq = "0.10"
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
dirs = "5.0"  # для поиска config.toml в стандартных местах

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
